--- a/index.html
+++ b/index.html
@@ -1,25 +1,113 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="css/index.css"/>
+		<link rel="stylesheet" type="text/css" href="css/index.css" />
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 	</head>
+
 	<body>
 		<div id="pic">
-			<img src="img/65abdb997fd7e53b447b3a6edbbb94d5.gif"/>
+			<img src="img/65abdb997fd7e53b447b3a6edbbb94d5.gif" />
 		</div>
 		<div id="time">
-			
-		</div>
-		<div id="loading-status">
-			<div id="process">
-				
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
+			</div>
+			<div class="loading-status">
+				<div class="tip">
+					子时
+				</div>
+				<div class="process">
+				</div>
 			</div>
 		</div>
+		<script></script>
 		<div id="shichen">
-			
 		</div>
 	</body>
+
 </html>
